--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,9 @@
 .container {
   min-height: 100vh;
-  width: 1440px;
+  width: 100%;
+}
+@media screen and (min-width: 1444px) {
+  .container {
+    width: 1440px;
+  }
 }
