--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,8 @@ body {
   font-family: Euclid Circular A, -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
+  background-color: #000;
+  color: #fff;
 }
 
 a {
