--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  font-size: 62.5%;
+}
 html,
 body {
   font-family: Euclid Circular A, -apple-system, BlinkMacSystemFont, Segoe UI,
