--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,6 +12,9 @@
 .main {
   margin-top: 100px;
 }
+.showcase {
+  margin-top: 50px;
+}
 
 /*Modules*/
 .logo {
@@ -57,6 +60,17 @@
 .codebtn {
   text-align: center;
   margin-top: 32px;
+}
+.phone {
+  width: 960px;
+  height: 640px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  background-color: #f1f5ff;
+  margin: 0 auto;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 /*Media queries*/
 @media screen and (min-width: 360px) {
@@ -119,6 +133,10 @@
   }
   .codebtn {
     margin-top: 92px;
+  }
+
+  .showcase {
+    margin-top: 178px;
   }
 }
 @media screen and (max-width: 998px) {
